--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
-    - run: yarn run jest
+    - run: yarn test
